# AutoPanningLab

./: README.md
configs/: client_secrets.json
data/gt/: GT_4Apr2023_coco.json
data/via/: history.md
data_augmentation/data/gt/: GT_4Apr2023.csv  GT_4Apr2023.json
exploration/0329/: Result.md
solution/: README.md
solution/Control/: README.md
solution/Control/cpp/: .gitignore  CMakeLists.txt  Logs.h  inference.cpp  inference.h  main.cpp
solution/Control/python/: Module test.ipynb  README.md  main_mk1.py  mk1_picker.py  mk1_supplier.py
solution/Control/python/common/: __init__.py
solution/Control/python/motors/: servo.py  step.py
solution/Control/python/visions/: __init__.py
solution/YOLOv8/: 20230407_YOLOv8_학습.ipynb  README.md  download_model.py  requirements.txt
solution/YOLOv8/230407/: README.md  result.yaml
